# DeepDocs-AI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_rag_research_baseline.ipynb  02_advanced_retrieval_rerank.ipynb  03_agentic_rag_tools.ipynb
src/: __init__.py  config.py
src/agent/: __init__.py  brain.py
src/evaluation/: __init__.py  metrics.py
src/indexing/: __init__.py  engine.py  strategies.py
src/query_engine/: __init__.py  response_synthesizer.py  rewriter.py
src/retrieval/: __init__.py  advanced_retrievers.py  core.py  rerankers.py
