[project]
name = "deepdocs-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index",
    "llama-index-llms-gemini",
    "llama-index-embeddings-gemini",
    "llama-index-readers-file",
    "pypdf",
    "docx2txt",
    "python-dotenv",
    "faiss-cpu",
    "chromadb",
    "llama-index-vector-stores-chroma",
    "llama-index-postprocessor-cohere-rerank",
]
