[project]
name = "deepdocs-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index",
    "llama-index-readers-file",
    "pypdf",
    "docx2txt",
    "python-dotenv",
    "faiss-cpu",
    "chromadb",
    "llama-index-vector-stores-chroma",
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-llms-google-genai>=0.9.0",
    "llama-index-embeddings-google-genai>=0.5.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "google-generativeai>=0.8.6",
    "nest-asyncio>=1.6.0",
    "llama-index-retrievers-bm25>=0.7.1",
]
